--- a/baseimage/pipeline/steamcmd-buildconfig.yaml
+++ b/baseimage/pipeline/steamcmd-buildconfig.yaml
@@ -1,24 +1,25 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  name: 7days-build
-  namespace: 7days
+  name: okd-steamcmd-build
+  labels:
+    application: okd-steamcmd
 spec:
   source:
     git:
       ref: dev
       uri: 'https://github.com/Cardes/steamcmd.git'
-    contextDir: gameimages/7daystodie
+    contextDir: baseimage
     type: Git
   strategy:
     type: Docker
     dockerStrategy:
       dockerfilePath: Containerfile
+  output:
+    to:
+      kind: ImageStreamTag
+      name: 'okd-steamcmd:latest'
   triggers:
     - type: ImageChange
       imageChange: {}
     - type: ConfigChange
-  output:
-    to:
-      kind: ImageStreamTag
-      name: okd-7daystodie:latest
