--- a/gameimages/7daystodie/pipeline/7days-buildconfig.yaml
+++ b/gameimages/7daystodie/pipeline/7days-buildconfig.yaml
@@ -1,24 +1,28 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  name: 7days-build
-  namespace: 7days
+  name: 7days-build-game
+  labels:
+    application: okd-7daystodie  
 spec:
   source:
     git:
       ref: dev
       uri: 'https://github.com/Cardes/steamcmd.git'
-    contextDir: baseimage
+    contextDir: gameimages/7daystodie
     type: Git
   strategy:
     type: Docker
     dockerStrategy:
       dockerfilePath: Containerfile
-  triggers:
+      from:
+        kind: "ImageStreamTag"
+        name: "okd-steamcmd:latest"
+    triggers:
     - type: ImageChange
       imageChange: {}
     - type: ConfigChange
   output:
     to:
       kind: ImageStreamTag
-      name: okd-steamcmd:latest
+      name: okd-7daystodie:latest
