manually creating directories and setting permissions

--- a/baseimage/Containerfile
+++ b/baseimage/Containerfile
@@ -4,10 +4,6 @@ ENV USER mygame
 ENV HOME /mygame/gamefiles
 #add user and group for steamcmd
 RUN groupadd -r mygame && useradd --no-log-init -r -g mygame mygame
-#all gamecontent will be placed inside here
-VOLUME ["/mygame/gamefiles"]
-WORKDIR /mygame/gamefiles
 #allow the group to write and execute, this can't be bound to a specifc ID as openshift assigns random ids
-RUN chown -R mygame:mygame /mygame && chmod -R g+rwx /mygame /tmp
+RUN mkdir -p /mygame/gamefiles && chown -R mygame:mygame /mygame && chmod -R g+rwx /mygame && chmod -R a+rwx /tmp
 USER mygame
-WORKDIR /mygame
