--- a/gameimages/7daystodie/Containerfile
+++ b/gameimages/7daystodie/Containerfile
@@ -1,12 +1,10 @@
 
 FROM okd-steamcmd
 USER mygame
-WORKDIR /mygame/saves
-WORKDIR /mygame/data
 VOLUME ["/mygame/saves","/mygame/data"]
+RUN mkdir -p /mygame/saves && /mygames/data && chmod -R g+rwx /mydata
 WORKDIR /mygame
 #Installing 7days dedicated
 RUN steamcmd +force_install_dir /mygame/gamefiles +login anonymous +app_update 294420 +quit
-WORKDIR /mygame/gamefiles
 #The serveconfig.xml is provided via configmap so there is no need to build logic to convert ENV variable to serverconfig entries
 ENTRYPOINT [ "/mygame/gamefiles/./startserver.sh -configfile=/mygame/gamefiles/serverconfig.xml" ]
