--- a/gameimages/7daystodie/Containerfile
+++ b/gameimages/7daystodie/Containerfile
@@ -2,7 +2,7 @@
 FROM okd-steamcmd
 USER mygame
 VOLUME ["/mygame/saves","/mygame/data"]
-RUN mkdir -p /mygame/saves && /mygames/data && chmod -R g+rwx /mydata
+RUN mkdir -p /mygame/saves && mkdir -p /mygames/data && chmod -R g+rwx /mydata
 WORKDIR /mygame
 #Installing 7days dedicated
 RUN steamcmd +force_install_dir /mygame/gamefiles +login anonymous +app_update 294420 +quit
