--- a/gameimages/valheim/Containerfile
+++ b/gameimages/valheim/Containerfile
@@ -1,4 +1,18 @@
-FROM okd-steamcmd
+FROM docker.io/steamcmd/steamcmd:ubuntu-20
+#overwrite ENV for our user
+ENV USER mygame
+ENV HOME /mygame/gamefiles
+#add user and group for steamcmd
+RUN groupadd -r mygame && useradd --no-log-init -r -g mygame mygame
+#allow the group to write and execute, this can't be bound to a specifc ID as openshift assigns random ids
+RUN mkdir -p /mygame/gamefiles \
+    && mkdir -p /mygame/saves \
+    && mkdir -p /mygame/data  \
+    && chown -R mygame:mygame /mygame \
+    && chmod -R g+rwx /mygame \
+    && chmod -R a+rwx /tmp
+
+VOLUME ["/mygame/saves","/mygame/data"]
 WORKDIR /mygame
 USER mygame
 #Installing valheim dedicated
