removed group as it is not helping

--- a/gameimages/7daystodie/Containerfile
+++ b/gameimages/7daystodie/Containerfile
@@ -3,12 +3,12 @@ FROM docker.io/steamcmd/steamcmd:ubuntu-20
 ENV USER mygame
 ENV HOME /mygame/gamefiles
 #add user and group for steamcmd
-RUN groupadd -r mygame && useradd --no-log-init -r -g mygame mygame
+RUN useradd --no-log-init -r mygame
 #allow the group to write and execute, this can't be bound to a specifc ID as openshift assigns random ids
 RUN mkdir -p /mygame/gamefiles \
     && mkdir -p /mygame/saves \
     && mkdir -p /mygame/data  \
-    && chown -R mygame:mygame /mygame \
+    && chown -R mygame /mygame \
     && chmod -R 775 /mygame \
     && chmod -R 777 /tmp
 
@@ -16,5 +16,5 @@ VOLUME ["/mygame/saves","/mygame/data"]
 WORKDIR /mygame
 USER mygame
 #The serveconfig.xml is provided via configmap so there is no need to build logic to convert ENV variable to serverconfig entries
-COPY --chmod=555 src/entrypoint.sh /mygame
+COPY --chmod=555 --chown=mygame src/entrypoint.sh /mygame
 ENTRYPOINT [ "/mygame/./entrypoint.sh" ]
