removed chown in copy

--- a/gameimages/7daystodie/Containerfile
+++ b/gameimages/7daystodie/Containerfile
@@ -13,5 +13,5 @@ RUN mkdir -p /mygame/gamefiles \
 VOLUME ["/mygame/saves","/mygame/data"]
 WORKDIR /mygame
 #The serveconfig.xml is provided via configmap so there is no need to build logic to convert ENV variable to serverconfig entries
-COPY --chmod=555 --chown=mygame src/entrypoint.sh /mygame
+COPY --chmod=555 src/entrypoint.sh /mygame
 ENTRYPOINT [ "/mygame/./entrypoint.sh" ]
