--- a/gameimages/valheim/Containerfile
+++ b/gameimages/valheim/Containerfile
@@ -1,19 +1,12 @@
-FROM docker.io/steamcmd/steamcmd:ubuntu-20
-#overwrite ENV for our user
-ENV USER mygame
-ENV HOME /mygame/gamefiles
-#add user and group for steamcmd
-RUN groupadd -r mygame && useradd --no-log-init -r -g mygame mygame
-#allow the group to write and execute, this can't be bound to a specifc ID as openshift assigns random ids
-RUN mkdir -p /mygame/gamefiles \
-    && mkdir -p /mygame/saves \
-    && mkdir -p /mygame/data  \
-    && chown -R mygame:mygame /mygame \
-    && chmod -R g+rwx /mygame \
-    && chmod -R a+rwx /tmp
-
-VOLUME ["/mygame/saves","/mygame/gamefiles"]
+FROM ubuntu:22.04
+ENV SERVERNAME 'Valheim Dedicated Server for OKD'
+#Gameserver uses the range from 'serverport' to 'serverport'+2
+ENV SERVERPORT 2456
+ENV WORLDNAME 'Dedicated'
+ENV SERVERPASSWORD 'YouShouldChangeThis'
+VOLUME [ "/mygame/gamefiles" ]
+COPY --chmod=555 src/entrypoint.sh /mygame
 WORKDIR /mygame
-#Installing valheim dedicated
-ENTRYPOINT [ "/bin/bash" ]
+ENTRYPOINT [ "/mygame/./entrypoint.sh" ]
+
  
